add personal information to card

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <div class="card">
   <img src="img.jpg" alt="John" style="width:100%">
-  <h1>John Doe</h1>
-  <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
-  <a href="#"><i class="fa fa-dribbble"></i></a>
-  <a href="#"><i class="fa fa-twitter"></i></a>
-  <a href="#"><i class="fa fa-linkedin"></i></a>
-  <a href="#"><i class="fa fa-facebook"></i></a>
+  <h1>Jacqueline Gwynn</h1>
+  <p class="title">Senior Software Engineer</p>
+  <p>North Carolina Central University</p>
+  <a href="https://github.com/jgwynn36"><i class="fa fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/jacqueline-gwynn/"><i class="fa fa-linkedin"></i></a>
   <p><button>Contact</button></p>
 </div>
