--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
   <p>North Carolina Central University</p>
   <p>University of Phoenix</p>
   <p>University of North Carolina - Chapel Hill</p>
+  
+  <h2>Skills</h2>
+  <p>HTML</p>
+  <div class="container">
+    <div class="skills html">90%</div>
+  </div>
+
+<p>CSS</p>
+<div class="container">
+  <div class="skills css">80%</div>
+</div>
+
+<p>JavaScript</p>
+<div class="container">
+  <div class="skills js">65%</div>
+</div>
+
+<p>PHP</p>
+<div class="container">
+  <div class="skills php">60%</div>
+</div>
+
   <a href="https://github.com/jgwynn36"><i class="fa fa-github"></i></a>
   <a href="https://www.linkedin.com/in/jacqueline-gwynn/"><i class="fa fa-linkedin"></i></a>
   <p><button>Contact</button></p>
