update skills list

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      </style>
+  </head>
+  
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -14,29 +22,35 @@
   <p>North Carolina Central University</p>
   <p>University of Phoenix</p>
   <p>University of North Carolina - Chapel Hill</p>
+  <a href="https://github.com/jgwynn36"><i class="fa fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/jacqueline-gwynn/"><i class="fa fa-linkedin"></i></a>
+  <p><button>Contact</button></p>
+</div>
+
+<body>
   
   <h2>Skills</h2>
   <p>HTML</p>
   <div class="container">
     <div class="skills html">90%</div>
   </div>
+  
+  <p>CSS</p>
+  <div class="container">
+    <div class="skills css">80%</div>
+  </div>
+  
+  <p>JavaScript</p>
+  <div class="container">
+    <div class="skills js">65%</div>
+  </div>
+  
+  <p>PHP</p>
+  <div class="container">
+    <div class="skills php">60%</div>
+  </div>
 
-<p>CSS</p>
-<div class="container">
-  <div class="skills css">80%</div>
-</div>
 
-<p>JavaScript</p>
-<div class="container">
-  <div class="skills js">65%</div>
-</div>
-
-<p>PHP</p>
-<div class="container">
-  <div class="skills php">60%</div>
-</div>
-
-  <a href="https://github.com/jgwynn36"><i class="fa fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/jacqueline-gwynn/"><i class="fa fa-linkedin"></i></a>
-  <p><button>Contact</button></p>
-</div>
+  
+</body>
+</html>
