--- a/index.html
+++ b/index.html
@@ -9,30 +9,48 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<body>
+  <body>
+    <div class="card">
+      <img src="img.jpg" alt="pic" style="width:100%">
+      <h1>Jacqueline Gwynn</h1>
+      <h2 class="title">Senior Software Engineer</h2>
+        <p>Passionate Senior Software Engineer in test with an exceptional track-record 
+          in pace over perfection without sacificing quality. 9 years of experience in 
+          quality assurance engineering and software development life-cycle. 
+          Enjoy leading large project teams into a customer oriented deliverable 
+          and influencing quality-first development.</p>
+        <p>Solid foundation in agile methodology and Certified scrum master.  Lead Software Engineer 
+          in test leading cross functional teams within a product area.  Background in API testing and frontend testing. 
+        </p>
+      <h2>Education:</h2>
+      <p>North Carolina Central University</p>
+      <p>University of Phoenix</p>
+      <p>University of North Carolina - Chapel Hill</p>
+      <a href="https://github.com/jgwynn36"><i class="fa fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/jacqueline-gwynn/"><i class="fa fa-linkedin"></i></a>
+      <p><button>Contact</button></p>
+   </div>
   
-  <h2>Skills</h2>
-  <p>HTML</p>
-  <div class="container">
-    <div class="skills html">90%</div>
-  </div>
+    <h2>Skills</h2>
+    <p>HTML</p>
+    <div class="container">
+      <div class="skills html">90%</div>
+    </div>
   
-  <p>CSS</p>
-  <div class="container">
-    <div class="skills css">80%</div>
-  </div>
+    <p>CSS</p>
+    <div class="container">
+      <div class="skills css">80%</div>
+    </div>
   
-  <p>JavaScript</p>
-  <div class="container">
-    <div class="skills js">65%</div>
-  </div>
+    <p>JavaScript</p>
+    <div class="container">
+      <div class="skills js">65%</div>
+    </div>
   
-  <p>PHP</p>
-  <div class="container">
-    <div class="skills php">60%</div>
-  </div>
+    <p>PHP</p>
+    <div class="container">
+      <div class="skills php">60%</div>
+    </div>
 
-
-  
-</body>
+  </body>
 </html>
