--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<h2 style="text-align:center">Basic HTML Profile Page</h2>
+
 <div class="card">
   <img src="img.jpg" alt="pic" style="width:100%">
   <h1>Jacqueline Gwynn</h1>
